welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: not found: value t
  t=Array.fill(num)
  ^golomb:5: error: not found: value t
      i::t
         ^golomb:8: error: not found: value t
  return(t(num))
         ^