welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {	
  t=Array.fill(num)
  for(i<- 0 to num-1){
    for(j<- i to i+i){
      i::t
    }
  }
  return(t(num))
}